// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeaturedPublishers should adjust the layout of the cards if the width is larger than xs or sm 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-FeaturedPublishers root"
  classes={Object {}}
  subTitle="The most played titles by the most prolific publishers"
  title="Publishers"
>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedPublishers__itemsContainer itemsContainer"
    container={true}
    justify="center"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="1"
      xs={3}
    >
      <HighlightTrailerQuery
        cardActionLabel="1"
        cardActionLinkPath="/browse/publisher/1"
        data={
          Object {
            "appid": "1",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="2"
      xs={3}
    >
      <HighlightTrailerQuery
        cardActionLabel="2"
        cardActionLinkPath="/browse/publisher/2"
        data={
          Object {
            "appid": "2",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="3"
      xs={3}
    >
      <HighlightTrailerQuery
        cardActionLabel="3"
        cardActionLinkPath="/browse/publisher/3"
        data={
          Object {
            "appid": "3",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="4"
      xs={3}
    >
      <HighlightTrailerQuery
        cardActionLabel="4"
        cardActionLinkPath="/browse/publisher/4"
        data={
          Object {
            "appid": "4",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(FeaturedWidget)>
`;

exports[`FeaturedPublishers should render successfully 1`] = `
<WithStyles(FeaturedWidget)
  className="wye-FeaturedPublishers root"
  classes={Object {}}
  subTitle="The most played titles by the most prolific publishers"
  title="Publishers"
>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedPublishers__itemsContainer itemsContainer"
    container={true}
    justify="center"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="1"
      xs={6}
    >
      <HighlightTrailerQuery
        cardActionLabel="1"
        cardActionLinkPath="/browse/publisher/1"
        data={
          Object {
            "appid": "1",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="2"
      xs={6}
    >
      <HighlightTrailerQuery
        cardActionLabel="2"
        cardActionLinkPath="/browse/publisher/2"
        data={
          Object {
            "appid": "2",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    className="wye-FeaturedPublishers__itemsContainer itemsContainer"
    container={true}
    justify="center"
    spacing={2}
  >
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="3"
      xs={6}
    >
      <HighlightTrailerQuery
        cardActionHref="/browse/publisher/[id]"
        cardActionLabel="3"
        cardActionLinkPath="/browse/publisher/3"
        data={
          Object {
            "appid": "3",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="wye-FeaturedPublishers__item item"
      item={true}
      key="4"
      xs={6}
    >
      <HighlightTrailerQuery
        cardActionHref="/browse/publisher/[id]"
        cardActionLabel="4"
        cardActionLinkPath="/browse/publisher/4"
        data={
          Object {
            "appid": "4",
            "capsuleMd": "md",
            "developers": Array [
              "a",
            ],
            "discount": 25,
            "finalPrice": 750,
            "freeToPlay": false,
            "genres": Array [
              "a",
            ],
            "headerImage": "header",
            "initialPrice": 1000,
            "name": "name",
            "onSale": true,
            "ownersFormatted": "10,000 .. 20,000",
            "publishers": Array [
              "a",
            ],
            "userRating": 95,
          }
        }
        variant="md"
        withPrice={false}
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(FeaturedWidget)>
`;

exports[`FeaturedPublishersQuery should render successfully 1`] = `
<FeaturedPublishersQuery>
  <Query
    query={
      Object {
        "definitions": Array [
          Object {
            "directives": Array [],
            "kind": "OperationDefinition",
            "name": Object {
              "kind": "Name",
              "value": "GET_FEATURED_PUBLISHERS_TOP_TITLE_QUERY",
            },
            "operation": "query",
            "selectionSet": Object {
              "kind": "SelectionSet",
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "name": Object {
                    "kind": "Name",
                    "value": "getTopTitleForMostPopularPublishers",
                  },
                  "selectionSet": Object {
                    "kind": "SelectionSet",
                    "selections": Array [
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "publisher",
                        },
                        "selectionSet": undefined,
                      },
                      Object {
                        "alias": undefined,
                        "arguments": Array [],
                        "directives": Array [],
                        "kind": "Field",
                        "name": Object {
                          "kind": "Name",
                          "value": "topTitle",
                        },
                        "selectionSet": Object {
                          "kind": "SelectionSet",
                          "selections": Array [
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "appid",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "name",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "developers",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "publishers",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "ownersFormatted",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "userRating",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "genres",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "freeToPlay",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "onSale",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "discount",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "initialPrice",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "finalPrice",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "headerImage",
                              },
                              "selectionSet": undefined,
                            },
                            Object {
                              "alias": undefined,
                              "arguments": Array [],
                              "directives": Array [],
                              "kind": "Field",
                              "name": Object {
                                "kind": "Name",
                                "value": "capsuleMd",
                              },
                              "selectionSet": undefined,
                            },
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
            },
            "variableDefinitions": Array [],
          },
        ],
        "kind": "Document",
        "loc": Object {
          "end": 396,
          "start": 0,
        },
      }
    }
  >
    <WithStyles(LoadingState)
      classes={Object {}}
    >
      <LoadingState
        classes={
          Object {
            "progressIndicator": "LoadingState-progressIndicator-2",
            "root": "LoadingState-root-1",
          }
        }
      >
        <div
          className="wye-LoadingState LoadingState-root-1"
        >
          <WithStyles(ForwardRef(CircularProgress))
            className="wye-LoadingState__progressIndicator LoadingState-progressIndicator-2"
          >
            <ForwardRef(CircularProgress)
              className="wye-LoadingState__progressIndicator LoadingState-progressIndicator-2"
              classes={
                Object {
                  "circle": "MuiCircularProgress-circle",
                  "circleDisableShrink": "MuiCircularProgress-circleDisableShrink",
                  "circleIndeterminate": "MuiCircularProgress-circleIndeterminate",
                  "circleStatic": "MuiCircularProgress-circleStatic",
                  "colorPrimary": "MuiCircularProgress-colorPrimary",
                  "colorSecondary": "MuiCircularProgress-colorSecondary",
                  "indeterminate": "MuiCircularProgress-indeterminate",
                  "root": "MuiCircularProgress-root",
                  "static": "MuiCircularProgress-static",
                  "svg": "MuiCircularProgress-svg",
                }
              }
            >
              <div
                className="MuiCircularProgress-root wye-LoadingState__progressIndicator LoadingState-progressIndicator-2 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
                role="progressbar"
                style={
                  Object {
                    "height": 40,
                    "width": 40,
                  }
                }
              >
                <svg
                  className="MuiCircularProgress-svg"
                  viewBox="22 22 44 44"
                >
                  <circle
                    className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                    cx={44}
                    cy={44}
                    fill="none"
                    r={20.2}
                    strokeWidth={3.6}
                    style={Object {}}
                  />
                </svg>
              </div>
            </ForwardRef(CircularProgress)>
          </WithStyles(ForwardRef(CircularProgress))>
        </div>
      </LoadingState>
    </WithStyles(LoadingState)>
  </Query>
</FeaturedPublishersQuery>
`;
